--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,31 @@ language: minimal
 
 sudo: false
 
+matrix:
+  include:
+    - name: "linux"
+      os: linux
+    - name: "osx"
+      os: osx
+
 before_install:
   # Install and configure miniconda.
   - |
-    wget http://bit.ly/miniconda -O miniconda.sh
+    if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+      URL="https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh"
+    elif [ "$TRAVIS_OS_NAME" == "linux" ] ; then
+      URL="https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh"
+    fi
+    wget $URL -O miniconda.sh
+    echo ""
     bash miniconda.sh -b -p $HOME/miniconda
     export PATH="$HOME/miniconda/bin:$PATH"
     conda config --set always_yes yes --set changeps1 no --set show_channel_urls true
     conda update conda --quiet
     conda config --add channels conda-forge --force
     conda install pycryptosat
+    conda config --set sat_solver pycryptosat
+    conda config --set safety_checks disabled
     conda config --set channel_priority strict
 
 install:
